# medflux

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_QUICK.md  ROADMAP.md  api-observability.env.example  codecov.yml  environment_activate.ps1  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_tests.bat  setup_env.bat  smoke_samples.bat  start_monitoring.bat  start_monitoring.ps1  tmp_ci_snippet.txt
.github/: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yaml  codeql.yml  commitlint.yml  nightly-audit.yml  python-checks.yml  release.yml  tag-version-parity.yml  tests.yml
Agent_Standard/: .gitmessage
Agent_Standard/agent/: README.md
Agent_Standard/main_documantion/: main_changelog.md  main_project_info.md  main_readme.md
backend/Arch_backend/: Preprocessing_Module.json
backend/Preprocessing/: CHANGELOG.md  README.md
backend/api/: main.py
core/: __init__.py  policy_utils.py
core/cli/: __init__.py  medflux.py
core/exec/: __init__.py  loader.py
core/logging/: README.md  SCHEMA.md  __init__.py  context.py  filters.py  json_formatter.py  log_record.schema.json  queue_setup.py  redaction.py  uncaught.py  validate.py
docs/: BRANCH_PROTECTION.md  CONTRIBUTOR_GUIDE.md  README.md  STRUCTURE.md  STRUCTURE_V2.md  architecture_overview.md  logs_guide.md  observability_plan.md  validation_playbook.md
logs/: current.jsonl  demo.json
medflux/: ARCHITECTURE.md  README.md  requirements.txt  run_readers.py
medflux_backend/: __init__.py  temp_all_files.txt
samples/: Sample.txt  hello.txt
scripts/: ci_check_paths.py  environment_activate.ps1  run_samples.ps1
tests/: README.md  conftest.py
tools/: TOOLS.md
tools/logs/: query.py  (+3 more)
(+822 files in other folders)
